src/test/success/function_recursion_reuse_param.egern
func test1(a: int): int {
    test2(a);
    return a;
}

func test2(a: int): int {
    return a;
}

print(test1(3));
