src/test/fail/return_deeper_array_type_fail.egern
func arrayify(arg: [int]): [int] {
    return [arg]
}

print(arrayify([1, 2, 3]));
